# the-rust-programming-language

./: .gitignore  README.md
dev_guide/: Cargo.toml
dev_guide/src/: main.rs
http_server/: Cargo.toml
http_server/public/: hello.html  index.html
http_server/src/: main.rs  query_string.rs  request.rs  response.rs  server.rs  utils.rs  website_handler.rs
mars_calc/src/: main.rs
projects/closures/src/: main.rs
projects/collections/src/: main.rs
projects/enums/src/: main.rs
projects/errors/src/: main.rs
projects/functions/src/: main.rs
projects/functions_with_ownership/: Cargo.toml
projects/generics/src/: main.rs
projects/guessing_game/: Cargo.toml
projects/guessing_game/src/: main.rs
projects/iterators/src/: main.rs
projects/lifetimes/src/: main.rs
projects/loops/src/: main.rs
projects/ownership/src/: main.rs
projects/slices/src/: main.rs
projects/structs/src/: main.rs
projects/traits/src/: main.rs
projects/transferring_ownership/: Cargo.toml
projects/transferring_ownership/src/: main.rs
projects/variables/src/: main.rs
restaurant/src/: lib.rs
the-book/branches/src/: main.rs
the-book/closures/src/: main.rs
the-book/collections/src/: main.rs
the-book/deref_and_drop/src/: main.rs
the-book/functions_with_ownership/src/: main.rs
the-book/guessing_game/src/: main.rs
the-book/hello_cargo/: Cargo.toml
the-book/hello_world/: main
the-book/interior_mutability/src/: main.rs
the-book/my_crate/: Cargo.toml
the-book/my_crate/src/: lib.rs  main.rs
the-book/patterns_and_matching/: Cargo.toml
(+20 files in other folders)
