[package]
name = "my_crate"
version = "0.1.0"
authors = ["petrostrak"]
edition = "2021"
description = "A library for modeling artistic concepts"
licence = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
